Работа над сеткой каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -263,8 +263,8 @@
                 <a class="extra-list__button button" href="#">Заказать</a>
               </li>
 
-              <li class="extra-list-list__item">
-                <h3 class="extra-list-list__item-title">Витамины</h3>
+              <li class="extra-list__item">
+                <h3 class="extra-list__item-title">Витамины</h3>
                 <table class="extra-list__table">
                   <tr>
                     <td class="extra-list__value">1 упаковка (30 г)</td>
