--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,6 @@
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="format-detection" content="telephone=no">
-  <link href="https://fonts.googleapis.com/css?family=Oswald:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -53,24 +51,20 @@
         <section class="program-type container">
           <div class="program-type__wrapper">
             <h3 class="visually-hidden">Подбор программы</h3>
-            <ul class="program-type__list compilation-list container">
+            <ul class="program-type__list compilation-list">
               <li class="compilation-list__item">
                 <h4 class="compilation-list__item-title">Похудение</h4>
                 <p class="compilation-list__text">Ваш кот весит больше собаки и почти утратил способность
                   лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
                   лишний вес.</p>
-                <a class="compilation-list__link">
-                  <p class="compilation-list__link-text">Каталог Slim</p>
-                </a>
+                <a class="compilation-list__link">Каталог Slim</a>
               </li>
 
               <li class="compilation-list__item">
                 <h4 class="compilation-list__item-title">Набор массы</h4>
                 <p class="compilation-list__text">Заработать авторитет среди дворовых котов и даже собак?
                   Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-                <a class="compilation-list__link">
-                  <p class="compilation-list__link-text">Каталог Pro</p>
-                </a>
+                <a class="compilation-list__link">Каталог Pro</a>
               </li>
             </ul>
           </div>
