--- a/source/index.html
+++ b/source/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Кэт энерджи</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Кэт энерджи</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+  </head>
+  <body>
     <header class="page-header container">
       <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
       <div class="page-header__logo">
         <a class="page-header__logo-link">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
         </a>
-
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -48,7 +47,7 @@
           </div>
         </header>
 
-        <section class="program-type container">
+        <section class="program-type container">   <!--Удалил program-type.scss, если нужно, создать снова-->
           <div class="program-type__wrapper">
             <h3 class="visually-hidden">Подбор программы</h3>
             <ul class="program-type__list compilation-list">
@@ -112,7 +111,7 @@
       </section>
 
       <div class="page-footer__wrapper">
-        <div class="page-footer__social-wrapper container">  <!-- К сожалению ничего лучше придумать не смог-->
+        <div class="page-footer__content container">
           <a class="page-footer__main-link">
             <img class="page-footer__main-img" src="img/logo-footer.svg" width="130" height="25" alt="Логотип магазина Кэт энерджи">
           </a>
@@ -151,7 +150,6 @@
                           c-0.003-0.265,0.012-2.595,1.578-3.034C21.369,22.566,21.502,22.548,21.638,22.548z"/>
                     </g>
                   </svg>
-
                 </a>
               </li>
               <li class="social__item">
@@ -193,5 +191,5 @@
         </div>
       </div>
     </footer>
-</body>
+  </body>
 </html>
