--- a/source/index.html
+++ b/source/index.html
@@ -169,7 +169,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--facebook" href="#">
+                <a clss="social__link social__link--facebook" href="#">
                   <span class="visually-hidden">Мы в Фэйсбуке</span>
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="13.518px" height="27.75px" viewBox="34.789 -4.709 13.518 27.75" enable-background="new 34.789 -4.709 13.518 27.75" xml:space="preserve">
                     <g> <path d="M44.32,23.041h-6.816V10.137h-2.715V3.763h2.629c-0.202-2.887,0.298-5,1.519-6.444c1.039-1.229,2.583-1.911,4.588-2.026
@@ -182,7 +182,6 @@
               </li>
             </ul>
           </div>
-
           <div class="page-footer__copyright copyright container">
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
               <img class="copyright__img" src="img/htmlacademy.svg" width="27" height="34" alt="Логотип Html Academy">
