--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,35 +7,36 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <header class="page-header container">
-      <h1 class="visually-hidden">Каталог магазина Cat energy</h1>
+  <header class="page-header container">
+    <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
+
+
+    <nav class="main-nav main-nav--opened main-nav--nojs">
       <div class="page-header__logo">
-        <a class="page-header__logo-link" href="index.html">
+        <a class="page-header__logo-link">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
         </a>
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="index.html">Главная</a>
+          </li>
 
-      <nav class="main-nav">
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a href="index.html">Главная</a>
-            </li>
+          <li class="site-list__item site-list__item--active">
+            <a>Каталог продукции</a>
+          </li>
 
-            <li class="site-list__item site-list__item--active">
-              <a>Каталог продукции</a>
-            </li>
-
-            <li class="site-list__item">
-              <a href="form.html">Подбор программы</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+          <li class="site-list__item">
+            <a href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
     <main class="page-main container">
       <section class="catalog">
@@ -370,5 +371,22 @@
         </div>
       </div>
     </footer>
+  <script>
+    var navMain = document.querySelector('.main-nav');
+    var navToggle = document.querySelector('.main-nav__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+
+    navToggle.addEventListener('click', function() {
+      if (navMain.classList.contains('main-nav--closed')) {
+        navMain.classList.remove('main-nav--closed');
+        navMain.classList.add('main-nav--opened');
+      } else {
+        navMain.classList.add('main-nav--closed');
+        navMain.classList.remove('main-nav--opened');
+      }
+    });
+  </script>
+
   </body>
 </html>
