--- a/source/index.html
+++ b/source/index.html
@@ -9,16 +9,17 @@
   <body>
     <header class="page-header container">
       <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
-      <div class="page-header__logo">
-        <a class="page-header__logo-link">
-          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
-        </a>
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-      </div>
 
-      <nav class="main-nav">
+
+      <nav class="main-nav main-nav--opened main-nav--nojs">
+        <div class="page-header__logo">
+          <a class="page-header__logo-link">
+            <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
+          </a>
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+        </div>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
@@ -190,5 +191,22 @@
         </div>
       </div>
     </footer>
+    <script>
+      var navMain = document.querySelector('.main-nav');
+      var navToggle = document.querySelector('.main-nav__toggle');
+
+      navMain.classList.remove('main-nav--nojs');
+
+      navToggle.addEventListener('click', function() {
+        if (navMain.classList.contains('main-nav--closed')) {
+          navMain.classList.remove('main-nav--closed');
+          navMain.classList.add('main-nav--opened');
+        } else {
+          navMain.classList.add('main-nav--closed');
+          navMain.classList.remove('main-nav--opened');
+        }
+      });
+    </script>
+
   </body>
 </html>
