--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,11 +5,11 @@
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/script.js"></script>
   </head>
   <body>
   <header class="page-header container">
     <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
-
 
     <nav class="main-nav main-nav--opened main-nav--nojs">
       <div class="page-header__logo">
@@ -371,22 +371,6 @@
         </div>
       </div>
     </footer>
-  <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.main-nav__toggle');
-
-    navMain.classList.remove('main-nav--nojs');
-
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navMain.classList.add('main-nav--opened');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navMain.classList.remove('main-nav--opened');
-      }
-    });
-  </script>
-
+    <script src="js/script.js"></script>
   </body>
 </html>
