--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,6 @@
     <header class="page-header container">
       <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
 
-
       <nav class="main-nav main-nav--opened main-nav--nojs">
         <div class="page-header__logo">
           <a class="page-header__logo-link">
@@ -191,22 +190,6 @@
         </div>
       </div>
     </footer>
-    <script>
-      var navMain = document.querySelector('.main-nav');
-      var navToggle = document.querySelector('.main-nav__toggle');
-
-      navMain.classList.remove('main-nav--nojs');
-
-      navToggle.addEventListener('click', function() {
-        if (navMain.classList.contains('main-nav--closed')) {
-          navMain.classList.remove('main-nav--closed');
-          navMain.classList.add('main-nav--opened');
-        } else {
-          navMain.classList.add('main-nav--closed');
-          navMain.classList.remove('main-nav--opened');
-        }
-      });
-    </script>
-
+    <<script src="js/script.js"></script>
   </body>
 </html>
