--- a/source/index.html
+++ b/source/index.html
@@ -43,15 +43,16 @@
           <div class="program-slogan__wrapper container">
             <h2 class="program-slogan__title">Функциональное питание для котов</h2>
             <p class="program-slogan__text">Занялся собой? Займись котом!</p>
-            <a class="program-slogan__button button " href="form.html">Подобрать программу</a>
           </div>
-        </header>
+         </header>
+        <a class="program-slogan__button button container" href="form.html">Подобрать программу</a>
+
 
         <section class="program-type container">   <!--Удалил program-type.scss, если нужно, создать снова-->
           <div class="program-type__wrapper">
             <h3 class="visually-hidden">Подбор программы</h3>
             <ul class="program-type__list compilation-list">
-              <li class="compilation-list__item">
+              <li class="compilation-list__item compilation-list__item-slim">
                 <h4 class="compilation-list__item-title">Похудение</h4>
                 <p class="compilation-list__text">Ваш кот весит больше собаки и почти утратил способность
                   лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить
@@ -59,7 +60,7 @@
                 <a class="compilation-list__link">Каталог Slim</a>
               </li>
 
-              <li class="compilation-list__item">
+              <li class="compilation-list__item compilation-list__item-pro">
                 <h4 class="compilation-list__item-title">Набор массы</h4>
                 <p class="compilation-list__text">Заработать авторитет среди дворовых котов и даже собак?
                   Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
