Работа над декором index

--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
 
     <nav class="main-nav main-nav--opened main-nav--nojs">
       <div class="page-header__logo">
-        <a class="page-header__logo-link">
+        <a class="page-header__logo-link page-header__logo-link-other">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
         </a>
         <button class="main-nav__toggle" type="button">
@@ -22,11 +22,11 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a href="index.html">Главная</a>
+            <a class="site-list__item-inactive" href="index.html">Главная</a>
           </li>
 
           <li class="site-list__item">
-            <a href="catalog.html">Каталог продукции</a>
+            <a class="site-list__item-inactive" href="catalog.html">Каталог продукции</a>
           </li>
 
           <li class="site-list__item site-list__item--active">
