--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,7 +13,7 @@
 
     <nav class="main-nav main-nav--opened main-nav--nojs">
       <div class="page-header__logo">
-        <a class="page-header__logo-link">
+        <a class="page-header__logo-link page-header__logo-link-other" href="index.html">
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
         </a>
         <button class="main-nav__toggle" type="button">
@@ -23,7 +23,7 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a href="index.html">Главная</a>
+            <a class="site-list__item-inactive" href="index.html">Главная</a>
           </li>
 
           <li class="site-list__item site-list__item--active">
@@ -31,7 +31,7 @@
           </li>
 
           <li class="site-list__item">
-            <a href="form.html">Подбор программы</a>
+            <a class="site-list__item-inactive" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
