--- a/source/index.html
+++ b/source/index.html
@@ -26,11 +26,11 @@
             </li>
 
             <li class="site-list__item">
-              <a href="catalog.html">Каталог продукции</a>
+              <a class="site-list__item-inactive" href="catalog.html">Каталог продукции</a>
             </li>
 
             <li class="site-list__item">
-              <a href="form.html">Подбор программы</a>
+              <a class="site-list__item-inactive" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -74,16 +74,16 @@
           <div class="principle-program__wrapper container">
             <h3 class="principle-program__slogan">Как это работает</h3>
             <ul class="principle-program__list">
-              <li class="principle-program__text principle-program__text--nutrition">
+              <li class="principle-program__text principle-program__text--leaf">
                 Функциональное питание содержит только полезные питательные вещества.
               </li>
-              <li class="principle-program__text principle-program__text--cook">
+              <li class="principle-program__text principle-program__text--powder">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
               </li>
-              <li class="principle-program__text principle-program__text--change">
+              <li class="principle-program__text principle-program__text--dining">
                 Замените один-два приема обычной еды на наше функциональное питание.
               </li>
-              <li class="principle-program__text principle-program__text--time">
+              <li class="principle-program__text principle-program__text--clock">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
               </li>
             </ul>
