--- a/source/catalog.html
+++ b/source/catalog.html
@@ -273,7 +273,7 @@
           </ul>
         </div>
         <div class="catalog__bonus">
-          <p class="catalog__bonus-title">Закажите все и получите чехол для кота в подарок</p>
+          <p class="catalog__bonus-title">Закажите все<br> и получите чехол для<br> кота в подарок</p>
         </div>
       </section>
     </main>
