--- a/source/catalog.html
+++ b/source/catalog.html
@@ -302,7 +302,7 @@
               <li class="social__item">
                 <a class="social__link social__link--vkontakte" href="#">
                   <span class="visually-hidden">Мы в Вконтакте</span>
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"x="0px"y="0px"width="30.004px"height="15.761px"viewBox="3.007 11.628 30.004 15.761"enable-background="new 3.007 11.628 30.004 15.761"xml:space="preserve"><g>
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30.004px" height="15.761px" viewBox="3.007 11.628 30.004 15.761" enable-background="new 3.007 11.628 30.004 15.761" xml:space="preserve"><g>
                     <path fill="#666666" d="M26.945,27.388c-0.386,0-1.17-0.082-2.075-0.632c-0.642-0.385-1.223-0.968-1.784-1.532    c-0.438-0.44-1.171-1.177-1.447-1.177c-0.268,0.075-0.481,0.921-0.476,1.569c0.004,0.113-0.001,0.774-0.468,1.213
                           c-0.425,0.4-1.088,0.485-1.216,0.498l-1.926,0.007c-0.967,0-4.358-0.218-7.429-3.021c-3.674-3.358-6.835-9.798-6.968-10.07
                           c-0.197-0.462-0.248-1.066,0.152-1.482c0.392-0.413,1.081-0.472,1.359-0.479l4.083-0.024l0.115,0.008
@@ -335,7 +335,7 @@
               <li class="social__item">
                 <a class="social__link social__link--instagram" href="#">
                   <span class="visually-hidden">Мы в Инстаграме</span>
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23px" height="23px" viewBox="-3 -3 23 23" enable-background="new -3 -3 23 23" xml:space="preserve">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23px" height="23px" viewBox="-3 -3 23 23" enable-background="new -3 -3 23 23" xml:space="preserve">
                     <path fill="#666666"
                           d="M14.002-1.501c2.48,0,4.498,2.02,4.498,4.501v11c0,2.481-2.018,4.5-4.498,4.5H3.01
                         c-2.48,0-4.498-2.019-4.498-4.5V3c0-2.481,2.018-4.5,4.498-4.5h10.992 M14.002-3H3.01C-0.29-3-2.987-0.301-2.987,3v11.001
@@ -351,7 +351,7 @@
               <li class="social__item">
                 <a class="social__link social__link--facebook" href="#">
                   <span class="visually-hidden">Мы в Фэйсбуке</span>
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="13.518px" height="27.75px" viewBox="34.789 -4.709 13.518 27.75" enable-background="new 34.789 -4.709 13.518 27.75" xml:space="preserve">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="13.518px" height="27.75px" viewBox="34.789 -4.709 13.518 27.75" enable-background="new 34.789 -4.709 13.518 27.75" xml:space="preserve">
                     <g> <path fill="#666666" d="M44.32,23.041h-6.816V10.137h-2.715V3.763h2.629c-0.202-2.887,0.298-5,1.519-6.444c1.039-1.229,2.583-1.911,4.588-2.026
                             l4.782-0.001v6.15h-3.755c-0.166,0.315-0.251,1.093-0.252,2.321h3.978v6.375H44.32V23.041z M39.004,21.541h3.816V8.637h3.957V5.263
                             h-3.953l-0.016-0.734c-0.044-2.04,0.002-3.784,1.007-4.46l0.19-0.127h2.801v-3.15h-3.239c-1.557,0.091-2.711,0.581-3.485,1.496
