--- a/source/index.html
+++ b/source/index.html
@@ -45,8 +45,9 @@
             <p class="program-slogan__text">Занялся собой? Займись котом!</p>
           </div>
         </header>
-        <a class="program-slogan__button button container" href="form.html">Подобрать программу</a>
-
+        <div class="program-slogan__wrapper-link container">
+          <a class="program-slogan__button button" href="form.html">Подобрать программу</a>
+        </div>
         <section class="program-type container">
           <div class="program-type__wrapper">
             <h3 class="visually-hidden">Подбор программы</h3>
@@ -73,17 +74,17 @@
           <div class="principle-program__wrapper container">
             <h3 class="principle-program__slogan">Как это работает</h3>
             <ul class="principle-program__list">
-              <li class="principle-program__text principle-program__text--leaf">
-                Функциональное питание содержит только полезные питательные вещества.
+              <li class="principle-program__item principle-program__item--leaf">
+                <p class="principle-program__item-text">Функциональное питание <br>содержит только полезные <br>питательные вещества.</p>
               </li>
-              <li class="principle-program__text principle-program__text--powder">
-                Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+              <li class="principle-program__item principle-program__item--powder">
+                <p class="principle-program__item-text">Выпускается в виде порошка,<br> который нужно лишь залить кипятком и готово.</p>
               </li>
-              <li class="principle-program__text principle-program__text--dining">
-                Замените один-два приема обычной еды на наше функциональное питание.
+              <li class="principle-program__item principle-program__item--dining">
+                <p class="principle-program__item-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
               </li>
-              <li class="principle-program__text principle-program__text--clock">
-                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              <li class="principle-program__item principle-program__item--clock">
+                <p class="principle-program__item-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
               </li>
             </ul>
           </div>
