Работа над каталогом планшетной версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -211,14 +211,13 @@
                 <a class="product-list__button button" href="#">Заказать</a>
               </div>
             </li>
-
-            <li class="product-list__item">
-              <div class="catalog__other">
+            <div class="catalog__other">
+              <div class="catalog__other-wrapper">
                 <p class="catalog__other-subtitle">Показать еще 100500 товаров</p>
                 <p class="catalog__other-text">На самом деле вкусов гораздо больше!</p>
                 <a class="catalog__other-button button button--all" href="#">Показать все</a>
               </div>
-            </li>
+            </div>
           </ul>
         </div>
       </section>
@@ -228,47 +227,55 @@
           <h2 class="addition__subtitle">Дополнительные товары</h2>
           <ul class="addition__list extra-list">
             <li class="extra-list__item">
-              <h3 class="extra-list__item-title">Сахарозаменитель</h3>
-              <table class="extra-list__table">
-                <tr>
-                  <td class="extra-list__value">1 упаковка (100 г)</td>
-                  <td class="extra-list__value extra-list__value--field">200 Р.</td>
-                </tr>
-              </table>
-              <a class="extra-list__button button" href="#">Заказать</a>
+              <div class="extra-list__item-wrapper">
+                <h3 class="extra-list__item-title">Сахарозаменитель</h3>
+                <table class="extra-list__table">
+                  <tr>
+                    <td class="extra-list__value">1 упаковка (100 г)</td>
+                    <td class="extra-list__value extra-list__value--field">200 Р.</td>
+                  </tr>
+                </table>
+                <a class="extra-list__button button" href="#">Заказать</a>
+              </div>
             </li>
 
             <li class="extra-list__item">
-              <h3 class="extra-list__item-title">Питьевая вода</h3>
-              <table class="extra-list__table">
-                <tr>
-                  <td class="extra-list__value">5 литров</td>
-                  <td class="extra-list__value extra-list__value--field">50 Р.</td>
-                </tr>
-              </table>
-              <a class="extra-list__button button" href="#">Заказать</a>
+              <div class="extra-list__item-wrapper">
+                <h3 class="extra-list__item-title">Питьевая вода</h3>
+                <table class="extra-list__table">
+                  <tr>
+                    <td class="extra-list__value">5 литров</td>
+                    <td class="extra-list__value extra-list__value--field">50 Р.</td>
+                  </tr>
+                </table>
+                <a class="extra-list__button button" href="#">Заказать</a>
+              </div>
             </li>
 
             <li class="extra-list__item">
-              <h3 class="extra-list__item-title">Молоко</h3>
-              <table class="extra-list__table">
-                <tr>
-                  <td class="extra-list__value">1 литр</td>
-                  <td class="extra-list__value extra-list__value--field">100 Р.</td>
-                </tr>
-              </table>
-              <a class="extra-list__button button" href="#">Заказать</a>
+              <div class="extra-list__item-wrapper">
+                <h3 class="extra-list__item-title">Молоко</h3>
+                <table class="extra-list__table">
+                  <tr>
+                    <td class="extra-list__value">1 литр</td>
+                    <td class="extra-list__value extra-list__value--field">100 Р.</td>
+                  </tr>
+                </table>
+                <a class="extra-list__button button" href="#">Заказать</a>
+              </div>
             </li>
 
             <li class="extra-list__item">
-              <h3 class="extra-list__item-title">Витамины</h3>
-              <table class="extra-list__table">
-                <tr>
-                  <td class="extra-list__value">1 упаковка (30 г)</td>
-                  <td class="extra-list__value extra-list__value--field">300 Р.</td>
-                </tr>
-              </table>
-              <a class="extra-list__button button" href="#">Заказать</a>
+              <div class="extra-list__item-wrapper">
+                <h3 class="extra-list__item-title">Витамины</h3>
+                <table class="extra-list__table">
+                  <tr>
+                    <td class="extra-list__value">1 упаковка (30 г)</td>
+                    <td class="extra-list__value extra-list__value--field">300 Р.</td>
+                  </tr>
+                </table>
+                <a class="extra-list__button button" href="#">Заказать</a>
+              </div>
             </li>
           </ul>
         </div>
