Начало работы над десктопом

--- a/source/index.html
+++ b/source/index.html
@@ -99,7 +99,7 @@
       </div>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer page-footer--index">
       <section class="page-footer__contacts contacts container">
         <h2 class="visually-hidden">Местонахождение магазина</h2>
         <p class="contacts__title">Приглашаем<br> к сотрудничеству дилеров!</p>
