--- a/source/form.html
+++ b/source/form.html
@@ -8,33 +8,35 @@
   </head>
   <body>
     <header class="page-header container">
-      <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
+      <div class="page-header-wrapper container">
+        <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
 
-      <nav class="main-nav main-nav--opened main-nav--nojs">
-        <div class="page-header__logo">
-          <a class="page-header__logo-link page-header__logo-link-other" href="index.html">
-            <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
-          </a>
-          <button class="main-nav__toggle" type="button">
-            <span class="visually-hidden">Открыть меню</span>
-          </button>
-        </div>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__item-inactive" href="index.html">Главная</a>
-            </li>
+        <nav class="main-nav main-nav--opened main-nav--nojs">
+          <div class="page-header__logo">
+            <a class="page-header__logo-link page-header__logo-link-other" href="index.html">
+              <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
+            </a>
+            <button class="main-nav__toggle" type="button">
+              <span class="visually-hidden">Открыть меню</span>
+            </button>
+          </div>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item">
+                <a class="site-list__item-inactive" href="index.html">Главная</a>
+              </li>
 
-            <li class="site-list__item">
-              <a class="site-list__item-inactive" href="catalog.html">Каталог продукции</a>
-            </li>
+              <li class="site-list__item">
+                <a class="site-list__item-inactive" href="catalog.html">Каталог продукции</a>
+              </li>
 
-            <li class="site-list__item site-list__item--active">
-              <a>Подбор программы</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+              <li class="site-list__item site-list__item--active">
+                <a>Подбор программы</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
 
     <main>
