--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
     <script src="js/script.js"></script>
   </head>
   <body>
-    <header class="page-header container">
+    <header class="page-header">
       <div class="page-header-wrapper container">
         <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
 
