--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/script.js"></script>
   </head>
   <body>
     <header class="page-header">
