--- a/source/index.html
+++ b/source/index.html
@@ -8,11 +8,11 @@
     <script src="js/script.js"></script>
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header page-header--index">
       <div class="page-header-wrapper container">
         <h1 class="visually-hidden">Магазин здорового питания Cat energy</h1>
 
-        <nav class="main-nav main-nav--opened main-nav--nojs">
+        <nav class="main-nav main-nav--index main-nav--opened main-nav--nojs">
           <div class="page-header__logo">
             <a class="page-header__logo-link">
               <img class="page-header__logo-image" src="img/logo-mobile.svg" width="192" height="40" alt="Логотип магазина Кэт энерджи">
@@ -24,15 +24,15 @@
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
               <li class="site-list__item site-list__item--active">
-                <a>Главная</a>
+                <a class="site-list__item-link">Главная</a>
               </li>
 
               <li class="site-list__item">
-                <a class="site-list__item-inactive" href="catalog.html">Каталог продукции</a>
+                <a class="site-list__item-link site-list__item-inactive" href="catalog.html">Каталог продукции</a>
               </li>
 
               <li class="site-list__item">
-                <a class="site-list__item-inactive" href="form.html">Подбор программы</a>
+                <a class="site-list__item-link site-list__item-inactive" href="form.html">Подбор программы</a>
               </li>
             </ul>
           </div>
